--- a/style.css
+++ b/style.css
@@ -1,20 +1,13 @@
 
 /* 
-
+///////////////////
 medidas usadas nas aulas de PI
 
 %: porcentagem
 px: pixel
 
 
-*/
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: monospace;
-}
+///////////////////
 
 h1 {
     color: #ff0000;
@@ -38,4 +31,29 @@ a{
 
 .boa_noite {
     color: rgb(255, 0, 225);
+} */
+
+
+.caixa {
+    width: 250px;
+    height: 250px;
+    background-color: red;
+    border: 1px solid black;
+}
+
+.caixa2 {
+    width: 250px;
+    height: 250px;
+    background-color: #fff;
+    border: 1px solid black;
+}
+
+.conteiner {
+    background-color: #0011ff;
+    display: flex;
+    justify-content: center;
+    /* justify-content: space-evenly; */
+    align-items: center;
+    width: 100%;
+    height: 500px;
 }
